--- a/studio/public/templates/dashboard.html
+++ b/studio/public/templates/dashboard.html
@@ -128,7 +128,7 @@
                     <div class="col-xs-5">&#160;</div>
 
                     <div class="col-xs-1">
-                        <i ng-if="!job.killing" class="fa fa-times dashboard-item-kill pull-right" ng-click="killTopic(job, $event)"></i>
+                        <i ng-if="!job.killing" class="fa fa-times dashboard-item-kill pull-right" ng-click="kill(job, $event)"></i>
                         <i ng-if="job.killing" class="fa fa-spinner fa-spin pull-right"></i>
                     </div>
 
@@ -171,7 +171,7 @@
                     <div class="col-xs-5">&#160;</div>
 
                     <div class="col-xs-1">
-                        <i ng-if="!job.killing" class="fa fa-times dashboard-item-kill pull-right" ng-click="killTopic(job, $event)"></i>
+                        <i ng-if="!job.killing" class="fa fa-times dashboard-item-kill pull-right" ng-click="kill(job, $event)"></i>
                         <i ng-if="job.killing" class="fa fa-spinner fa-spin pull-right"></i>
                     </div>
 
