--- a/studio/app/views/index.scala.html
+++ b/studio/app/views/index.scala.html
@@ -21,6 +21,7 @@
     <script type="text/javascript" src="@routes.Assets.at("scripts/components/panel/panel.js")"></script>
     <script type="text/javascript" src="@routes.Assets.at("scripts/components/diagram/diagramController.js")"></script>
     <script type="text/javascript" src="@routes.Assets.at("scripts/components/blockDataViewer/blockDataViewer.js")"></script>
+    <script type="text/javascript" src="@routes.Assets.at("scripts/models/dashboardViewModels.js")"></script>
     <script type="text/javascript" src="@routes.Assets.at("scripts/app.js")"></script>
     <script type="text/javascript" src="@routes.Assets.at("scripts/services/colorService.js")"></script>
     <script type="text/javascript" src="@routes.Assets.at("scripts/services/diagramService.js")"></script>
