--- a/studio/public/templates/dashboard.html
+++ b/studio/public/templates/dashboard.html
@@ -105,9 +105,9 @@
 
                     <div class="col-xs-2">Start</div>
 
-                    <div class="col-xs-2">Last Prediction</div>
-
                     <div class="col-xs-5">Trend</div>
+
+                    <div class="col-xs-2">Last Prediction</div>
 
                     <div class="col-xs-1"></div>
 
@@ -123,9 +123,11 @@
 
                     <div class="col-xs-2">{{::formatDate(job.started)}}</div>
 
-                    <div class="col-xs-2">&#160;</div>
+                    <div class="col-xs-5">
+                        <trend-line trend-data="job.trend" size="20"></trend-line>
+                    </div>
 
-                    <div class="col-xs-5">&#160;</div>
+                    <div class="col-xs-2">{{job.lastValue}}</div>
 
                     <div class="col-xs-1">
                         <i ng-if="!job.killing" class="fa fa-times dashboard-item-kill pull-right" ng-click="kill(job, $event)"></i>
@@ -146,11 +148,7 @@
 
                     <div class="col-xs-2">Name</div>
 
-                    <div class="col-xs-2">Start</div>
-
-                    <div class="col-xs-2">Last Prediction</div>
-
-                    <div class="col-xs-5">Trend</div>
+                    <div class="col-xs-9">Start</div>
 
                     <div class="col-xs-1"></div>
 
@@ -164,11 +162,7 @@
 
                     <div class="col-xs-2">{{::job.diagramName}}</div>
 
-                    <div class="col-xs-2">{{::formatDate(job.started)}}</div>
-
-                    <div class="col-xs-2">&#160;</div>
-
-                    <div class="col-xs-5">&#160;</div>
+                    <div class="col-xs-9">{{::formatDate(job.started)}}</div>
 
                     <div class="col-xs-1">
                         <i ng-if="!job.killing" class="fa fa-times dashboard-item-kill pull-right" ng-click="kill(job, $event)"></i>
