--- a/studio/public/stylesheets/site.css
+++ b/studio/public/stylesheets/site.css
@@ -379,7 +379,7 @@ button.diagram-evaluating { color: #2ca02c; }
 
 #dashboard-cards { position: relative; padding: 15px; }
 #dashboard-cards .row { padding: 0 15px 0 15px; }
-.dashboard-card { position: relative; background-color: #fff; margin: 15px 0 15px 0; border-radius: 4px; border: 1px solid #d9d9d9; cursor: pointer; }
+.dashboard-card { position: relative; background-color: #fff; margin: 15px 0 10px 0; border-radius: 4px; border: 1px solid #d9d9d9; cursor: pointer; }
 .card-value { width: 100%; padding: 6px 0 6px 0; text-align: center; font-size: 4em; color: #666; }
 .card-label { width: 100%; background-color: #f5f5f5; padding: 6px 0 6px 0; text-align: center; font-size: 1.3em; border-radius: 0 0 4px 4px; border-top: 1px solid #d9d9d9; color: #707070; }
 
@@ -389,15 +389,20 @@ button.diagram-evaluating { color: #2ca02c; }
 
 #dashboard-details { position: relative; width: 100%; height: 100%; overflow-x: hidden; overflow-y: auto; }
 .dashboard-items { position: relative; padding: 0 30px 0 30px; }
-.dashboard-item-header { width: 100%; margin: 0 0 15px 0; border: 1px solid #d9d9d9; border-radius: 4px; font-size: 1.1em; background-color: #f5f5f5; color: #707070; }
-.dashboard-item-header .row { padding: 10px 0 10px 0; border-radius: 4px; border-top: 4px solid #1f77b4; }
+.dashboard-item-header { width: 100%; margin: 0 0 8px 0; border: 1px solid #d9d9d9; border-radius: 4px; font-size: 1.1em; background-color: #f5f5f5; color: #707070; }
+.dashboard-item-header .row { padding: 10px 15px 10px 15px; border-radius: 4px; border-top: 4px solid #1f77b4; }
 .dashboard-item-header i, .dashboard-item i { margin-top: 3px; }
 .dashboard-item-header i:hover { cursor: pointer; }
-.dashboard-item { width: 100%; margin-bottom: 15px; padding: 15px; background-color: #fff; border-radius: 4px; border: 1px solid #d9d9d9; font-size: 1.1em; }
+.dashboard-header-col { padding: 0; }
+.dashboard-item { width: 100%; margin-bottom: 15px; padding: 0 15px 0 15px; background-color: #fff; border: 1px solid #d9d9d9; font-size: 1.1em; }
+.dashboard-item .row { margin: 0; }
+.dashboard-item-col { padding: 20px 0 20px 0; }
+.dashboard-item-trend { padding: 0; }
+.dashboard-trend { display: block; height: 60px; }
 .dashboard-item-kill { cursor: pointer; }
 
 .editor { position: relative; width: 100%; height: 100%; padding: 15px; }
 .editor textarea { width: 100%; height: 100%; resize: none; }
 
-.trend-line { fill: none; stroke: steelblue; stroke-width: 1.5px; }
+.trend-line { fill: none; stroke: #2ca02c; stroke-width: 2px; }
 
