Implemented file kafka consumer source.  Introduced docker files.

--- a/studio/app/views/index.scala.html
+++ b/studio/app/views/index.scala.html
@@ -7,6 +7,7 @@
 }
 
 @scripts = {
+    <script type="text/javascript" src="@routes.Application.javascriptRoutes"></script>
     <script type="text/javascript" src="@routes.Assets.at("scripts/shared/draggable.js")"></script>
     <script type="text/javascript" src="@routes.Assets.at("scripts/components/browser/browser.js")"></script>
     <script type="text/javascript" src="@routes.Assets.at("scripts/components/charts/charts.js")"></script>
