Refactored diagram canvas to support zoom, pan, and other features for the new / load clean functionality.

--- a/studio/public/scripts/components/modal/modal.html
+++ b/studio/public/scripts/components/modal/modal.html
@@ -2,7 +2,8 @@
      ng-style="{top: position.startY, left: position.startX, width: position.width, height: position.height }">
 
     <div class="emr-modal-header">
-        <span class="header-text">{{config.name}}</span>
+        <div class="header-text">{{config.title}}</div>
+        <div class="sub-header-text">{{config.subTitle}}</div>
     </div>
 
     <div class="emr-modal-body">
