--- a/studio/app/views/index.scala.html
+++ b/studio/app/views/index.scala.html
@@ -4,14 +4,19 @@
     <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/diagram.css")">
     <link rel="stylesheet" media="screen" href="@routes.Assets.at("scripts/components/browser/browser.css")">
     <link rel="stylesheet" media="screen" href="@routes.Assets.at("scripts/components/blockDataViewer/blockDataViewer.css")">
+    <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/dashboard.css")">
+    <link rel="stylesheet" media="screen" href="@routes.Assets.at("scripts/lib/angular-gridster.min.css")">
 }
 
 @scripts = {
     <script type="text/javascript" src="@routes.Application.javascriptRoutes"></script>
+    <script type="text/javascript" src="@routes.Assets.at("scripts/lib/jquery.resize.js")"></script>
+    <script type="text/javascript" src="@routes.Assets.at("scripts/lib/angular-gridster.min.js")"></script>
     <script type="text/javascript" src="@routes.Assets.at("scripts/shared/draggable.js")"></script>
     <script type="text/javascript" src="@routes.Assets.at("scripts/components/browser/browser.js")"></script>
     <script type="text/javascript" src="@routes.Assets.at("scripts/components/charts/charts.js")"></script>
     <script type="text/javascript" src="@routes.Assets.at("scripts/components/controls/controls.js")"></script>
+    <script type="text/javascript" src="@routes.Assets.at("scripts/components/dashboard/dashboard.js")"></script>
     <script type="text/javascript" src="@routes.Assets.at("scripts/components/grids/grids.js")"></script>
     <script type="text/javascript" src="@routes.Assets.at("scripts/components/diagram/diagramViewModel.js")"></script>
     <script type="text/javascript" src="@routes.Assets.at("scripts/components/diagram/diagram.js")"></script>
@@ -21,6 +26,7 @@
     <script type="text/javascript" src="@routes.Assets.at("scripts/components/modal/modal.js")"></script>
     <script type="text/javascript" src="@routes.Assets.at("scripts/components/panel/panel.js")"></script>
     <script type="text/javascript" src="@routes.Assets.at("scripts/components/diagram/diagramController.js")"></script>
+    <script type="text/javascript" src="@routes.Assets.at("scripts/components/diagram/diagramControls.js")"></script>
     <script type="text/javascript" src="@routes.Assets.at("scripts/components/blockDataViewer/blockDataViewer.js")"></script>
     <script type="text/javascript" src="@routes.Assets.at("scripts/models/dashboardViewModels.js")"></script>
     <script type="text/javascript" src="@routes.Assets.at("scripts/app.js")"></script>
@@ -35,20 +41,20 @@
         <div id="main-tabs">
 
             <ul class="vertical-tabs">
+
                 <li class="vertical-tab ng-class:{active: (activeView==0)}" ng-click="setActiveView(0)">
                     <div class="tab-icon"><i class="fa fa-sitemap fa-2x"></i></div>
                     <div class="tab-text">Studio</div>
                 </li>
                 <li class="vertical-tab ng-class:{active: (activeView==1)}" ng-click="setActiveView(1)">
-                    <div class="tab-icon">
-                        <i class="fa fa-tachometer fa-2x"></i>
-                    </div>
+                    <div class="tab-icon"><i class="fa fa-tachometer fa-2x"></i></div>
                     <div class="tab-text">Dashboard</div>
                     <div ng-if="!serviceAvailable" class="fa-stack tab-badge tab-badge-warning" ng-cloak>
                         <i class="fa fa-circle fa-stack-1x"></i>
                         <i class="fa fa-exclamation-circle fa-stack-1x"></i>
                     </div>
                 </li>
+
             </ul>
 
         </div>
