--- a/studio/public/templates/dashboard.html
+++ b/studio/public/templates/dashboard.html
@@ -1,179 +1,9 @@
 <div id="dashboard-wrapper">
 
-    <div class="navbar"></div>
-
-    <div id="dashboard-cards" class="container-fluid">
-
-        <div class="row">
-
-            <div class="col-xs-3">
-
-                <div class="dashboard-card" ng-click="activeCard(0)">
-                    <div class="card-value">{{cards.streaming == -1 ? "-" : cards.streaming}}</div>
-                    <div class="card-label">Data Streams</div>
-                </div>
-
-            </div>
-
-            <div class="col-xs-3">
-
-                <div class="dashboard-card" ng-click="activeCard(1)">
-                    <div class="card-value">{{cards.online == -1 ? "-" : cards.online}}</div>
-                    <div class="card-label">Online</div>
-                </div>
-
-            </div>
-
-            <div class="col-xs-3">
-
-                <div class="dashboard-card" ng-click="activeCard(2)">
-                    <div class="card-value">{{cards.offline == -1 ? "-" : cards.offline}}</div>
-                    <div class="card-label">Offline</div>
-                </div>
-
-            </div>
-
-            <div class="col-xs-3">
-
-                <div class="dashboard-card" ng-click="activeCard(3)">
-                    <div class="card-value">0</div>
-                    <div class="card-label">Notifications</div>
-                </div>
-
-            </div>
-
-        </div>
-
-        <div id="card-selector" ng-style="{'left': (selector.index * selector.xOffset + selector.xOffset / 2) + 'px', 'top': selector.height + 'px' }"></div>
+    <div class="navbar">
 
     </div>
 
-    <div id="dashboard-details" ng-switch on="selector.index">
-
-        <div class="dashboard-items" ng-switch-when="0">
-
-            <div class="dashboard-item-header container">
-
-                <div class="row">
-
-                    <div class="col-xs-2 dashboard-header-col">Topic</div>
-
-                    <div class="col-xs-2 dashboard-header-col">Start</div>
-
-                    <div class="col-xs-2 dashboard-header-col">Type</div>
-
-                    <div class="col-xs-2 dashboard-header-col">Frequency</div>
-
-                    <div class="col-xs-4">
-                        <i class="fa fa-plus pull-right" ng-click="addSource($event)"></i>
-                    </div>
-
-                </div>
-
-            </div>
-
-            <div class="dashboard-item container" ng-repeat="job in jobs">
-
-                <div class="row">
-
-                    <div class="col-xs-2 dashboard-item-col">{{::job.topic}}</div>
-
-                    <div class="col-xs-2 dashboard-item-col">{{::formatDate(job.started)}}</div>
-
-                    <div class="col-xs-2 dashboard-item-col">{{::job.pollingSourceType}}</div>
-
-                    <div class="col-xs-2 dashboard-item-col">{{::job.frequency}} per second</div>
-
-                    <div class="col-xs-4 dashboard-item-col">
-                        <i ng-if="!job.killing" class="fa fa-times dashboard-item-kill pull-right" ng-click="killTopic(job, $event)"></i>
-                        <i ng-if="job.killing" class="fa fa-spinner fa-spin pull-right"></i>
-                    </div>
-
-                </div>
-
-            </div>
-
-        </div>
-
-        <div class="dashboard-items" ng-switch-when="1">
-
-            <div class="dashboard-item-header container">
-
-                <div class="row">
-
-                    <div class="col-xs-2 dashboard-header-col">Name</div>
-
-                    <div class="col-xs-2 dashboard-header-col">Start</div>
-
-                    <div class="col-xs-5 dashboard-header-col">Trend</div>
-
-                    <div class="col-xs-2 dashboard-header-col">Last Prediction</div>
-
-                    <div class="col-xs-1"></div>
-
-                </div>
-
-            </div>
-
-            <div class="dashboard-item container" ng-repeat="job in jobs">
-
-                <div class="row">
-
-                    <div class="col-xs-2 dashboard-item-col">{{::job.diagramName}}</div>
-
-                    <div class="col-xs-2 dashboard-item-col">{{::formatDate(job.started)}}</div>
-
-                    <div class="col-xs-5 dashboard-item-trend">
-                        <trend-line class="dashboard-trend" trend-data="job.trend" size="20"></trend-line>
-                    </div>
-
-                    <div class="col-xs-2 dashboard-item-col">{{job.lastValue == -1 ? "-" : job.lastValue}}</div>
-
-                    <div class="col-xs-1 dashboard-item-col">
-                        <i ng-if="!job.killing" class="fa fa-times dashboard-item-kill pull-right" ng-click="kill(job, $event)"></i>
-                        <i ng-if="job.killing" class="fa fa-spinner fa-spin pull-right"></i>
-                    </div>
-
-                </div>
-
-            </div>
-
-        </div>
-
-        <div class="dashboard-items" ng-switch-when="2">
-
-            <div class="dashboard-item-header container">
-
-                <div class="row">
-
-                    <div class="col-xs-2 dashboard-header-col">Name</div>
-
-                    <div class="col-xs-9 dashboard-header-col">Start</div>
-
-                    <div class="col-xs-1"></div>
-
-                </div>
-
-            </div>
-
-            <div class="dashboard-item container" ng-repeat="job in jobs">
-
-                <div class="row">
-
-                    <div class="col-xs-2 dashboard-item-col">{{::job.diagramName}}</div>
-
-                    <div class="col-xs-9 dashboard-item-col">{{::formatDate(job.started)}}</div>
-
-                    <div class="col-xs-1">
-                        <i ng-if="!job.killing" class="fa fa-times dashboard-item-kill pull-right" ng-click="kill(job, $event)"></i>
-                        <i ng-if="job.killing" class="fa fa-spinner fa-spin pull-right"></i>
-                    </div>
-
-                </div>
-
-            </div>
-
-        </div>
-    </div>
+    <dashboard-pages></dashboard-pages>
 
 </div>
