--- a/studio/public/stylesheets/site.css
+++ b/studio/public/stylesheets/site.css
@@ -221,9 +221,11 @@ button.diagram-evaluating { color: #2ca02c; }
 
 /* modal directive */
 .emr-modal { background-color: #f9f9f9; position: absolute; border: 1px solid #e5e5e5; border-radius: 15px; z-index: 1150; box-shadow: 0px 6px 12px rgba(0, 0, 0, 0.175); }
-.emr-modal-header, .emr-modal-footer { position: relative; font-weight: bold; width: 100%; line-height: 60px; height: 60px; vertical-align: middle; }
-.emr-modal-body { position: relative; background-color: #fff; border-top: 1px solid #e5e5e5; border-bottom: 1px solid #e5e5e5; width: 100%; height: -webkit-calc(100% - 120px); height: calc(100% - 120px); margin: 0; overflow: hidden; }
-.emr-modal-footer { text-align: right; padding-right: 20px; }
+.emr-modal-header { position: relative; width: 100%; height: 70px; padding-left: 20px; }
+.header-text { height: 40px; }
+.sub-header-text { height: 30px; }
+.emr-modal-body { position: relative; background-color: #fff; border-top: 1px solid #e5e5e5; border-bottom: 1px solid #e5e5e5; width: 100%; height: -webkit-calc(100% - 130px); height: calc(100% - 130px); margin: 0; overflow: hidden; }
+.emr-modal-footer { position: relative; width: 100%; line-height: 60px; height: 60px; vertical-align: middle; text-align: right; padding-right: 20px; }
 .emr-modal-footer .btn+.btn { margin-left: 20px; }
 .emr-modal-backdrop { position: absolute; width: 100%; height: 100%; background-color: #32404e; opacity: 0; }
 
