--- a/studio/public/templates/studio.html
+++ b/studio/public/templates/studio.html
@@ -55,9 +55,8 @@
                       center-radius="26"
                       orbit-radius="20"
                       offset-radius="60"
-                      load="onLoadData"
-                      evaluate="onEvaluate"
-                      save="onSave">
+                      evaluating="evaluating"
+                      command="onDiagramCommand">
 
                 </diagram-controls>
 
