--- a/studio/public/templates/studio.html
+++ b/studio/public/templates/studio.html
@@ -39,7 +39,7 @@
 
     <div id="studio-container" file-drop>
 
-        <div id="dropTarget">Drop Data</div>
+        <div class="drop-target">Drop Data</div>
 
         <div id="studio-canvases" ng-class="{'flipped': onlineCanvas}">
 
