--- a/studio/public/scripts/components/modal/modal.html
+++ b/studio/public/scripts/components/modal/modal.html
@@ -2,8 +2,15 @@
      ng-style="{top: position.startY, left: position.startX, width: position.width, height: position.height }">
 
     <div class="emr-modal-header">
-        <div class="header-text">{{config.title}}</div>
-        <div class="sub-header-text">{{config.subTitle}}</div>
+
+        <div class="emr-modal-icon">
+            <i class="fa fa-3x ng-class:config.icon"></i>
+        </div>
+        <div class="emr-modal-header-text">
+            <div class="emr-modal-header-title">{{config.title}}</div>
+            <div class="emr-modal-header-sub-title">{{config.subTitle}}</div>
+        </div>
+
     </div>
 
     <div class="emr-modal-body">
@@ -11,10 +18,10 @@
     </div>
 
     <div class="emr-modal-footer">
-        <button type="button" class="btn btn-default" ng-click="onClose()" ng-show="config.showCancel">{{::config.cancel || 'Cancel'}}</button>
-        <button type="button" class="btn btn-default" ng-click="onBack()" ng-show="config.showBack">{{::config.back || 'Back'}}</button>
-        <button type="button" class="btn btn-default" ng-click="onNext()" ng-show="config.showNext">{{::config.next || 'Next'}}<i class="fa fa-chevron-right" style="padding-left: 10px;"></i></button>
-        <button type="button" class="btn btn-success" ng-click="onSave()" ng-show="config.showSave">{{::config.save || 'Save'}}</button>
+        <button type="button" class="btn btn-default" ng-click="onClose()" ng-show="config.showCancel">{{::config.cancelLabel || 'Cancel'}}</button>
+        <button type="button" class="btn btn-default" ng-click="onBack()" ng-show="config.showBack"><i class="fa fa-chevron-left" style="padding-right:10px;"></i>{{::config.backLabel || 'Back'}}</button>
+        <button type="button" class="btn btn-default" ng-click="onNext()" ng-show="config.showNext">{{::config.nextLabel || 'Next'}}<i class="fa fa-chevron-right" style="padding-left:10px;"></i></button>
+        <button type="button" class="btn btn-success" ng-click="onSave()" ng-show="config.showSave">{{::config.saveLabel || 'Save'}}</button>
     </div>
 
 </div>
