--- a/studio/public/stylesheets/site.css
+++ b/studio/public/stylesheets/site.css
@@ -102,8 +102,8 @@ body { font-family: Roboto, arial, sans-serif; background-color: #c5c5c5; overfl
 #browser-container { position: relative; width: 100%; height: 100%; overflow-x: hidden; }
 
 /* file dragging */
-#dropTarget { position: absolute; visibility: hidden; pointer-events: none; width: calc(100% - 20px); height: calc(100% - 20px); margin: 10px; z-index: 2; border: 4px dashed #989898; font-size: 3em; color: #989898; text-align: center; padding-top: 50px; }
-.dragging-file #dropTarget { visibility: visible; }
+.drop-target { position: absolute; visibility: hidden; pointer-events: none; width: calc(100% - 20px); height: calc(100% - 20px); margin: 10px; z-index: 2; border: 4px dashed #989898; font-size: 3em; color: #989898; text-align: center; padding-top: 50px; }
+.dragging-file .drop-target { visibility: visible; }
 
 /* studio canvas controls */
 .studio-controls { position: absolute; box-shadow: 0px 6px 12px rgba(0,0,0,0.125); z-index: 2; }
@@ -143,7 +143,6 @@ button.diagram-evaluating { color: #2ca02c; }
 }
 
 /* Diagram Controls */
-
 #offline-diagram-controls { top: 10px; right: 10px; }
 .diag-ctrls { position: absolute; z-index: 1; }
 
@@ -220,13 +219,16 @@ button.diagram-evaluating { color: #2ca02c; }
 #notification-exit { color: #31a354; position: absolute; right: 5px; top: 3px; cursor: pointer; }
 
 /* modal directive */
-.emr-modal { background-color: #f9f9f9; position: absolute; border: 1px solid #e5e5e5; border-radius: 15px; z-index: 1150; box-shadow: 0px 6px 12px rgba(0, 0, 0, 0.175); }
+.emr-modal { background-color: #f3f3f3; position: absolute; border-radius: 15px; z-index: 1150; box-shadow: 0px 6px 12px rgba(0, 0, 0, 0.175); }
 .emr-modal-header { position: relative; width: 100%; height: 70px; padding-left: 20px; }
-.header-text { height: 40px; }
-.sub-header-text { height: 30px; }
-.emr-modal-body { position: relative; background-color: #fff; border-top: 1px solid #e5e5e5; border-bottom: 1px solid #e5e5e5; width: 100%; height: -webkit-calc(100% - 130px); height: calc(100% - 130px); margin: 0; overflow: hidden; }
+.emr-modal-icon { position: relative; display: block; float: left; line-height: 70px; color: #32404e; }
+.emr-modal-icon i { vertical-align: middle; }
+.emr-modal-header-text { position: relative; display: block; float: left; padding: 10px 0 10px 20px; }
+.emr-modal-header-title { position: relative; display: block; font-size: 1.5em; }
+.emr-modal-header-sub-title { position: relative; display: block; font-size: 1.1em; color: #999; }
+.emr-modal-body { position: relative; background-color: #fff; border-top: 1px solid #d9d9d9; border-bottom: 1px solid #d9d9d9; width: 100%; height: -webkit-calc(100% - 130px); height: calc(100% - 130px); margin: 0; overflow: hidden; }
 .emr-modal-footer { position: relative; width: 100%; line-height: 60px; height: 60px; vertical-align: middle; text-align: right; padding-right: 20px; }
-.emr-modal-footer .btn+.btn { margin-left: 20px; }
+.emr-modal-footer .btn+.btn { margin-left: 10px; }
 .emr-modal-backdrop { position: absolute; width: 100%; height: 100%; background-color: #32404e; opacity: 0; }
 
 #chart-axes-controls { position: relative; width: 100%; margin: 15px 0 10px 0; }
@@ -359,6 +361,33 @@ button.diagram-evaluating { color: #2ca02c; }
 .grid-feature-count-title { width: 100%; height: 30px; line-height: 30px; vertical-align: middle; text-align: center; font-size: 1.5em; }
 .hist-container { position: absolute; height: 200px; background: #fff; border: 1px solid #e9e9e9; }
 .bar { fill: steelblue; }
+
+/* load data */
+#load-data-wrapper { height: 100%; width: 100%; }
+.load-data-container { height: 100%; width: 100%; }
+.load-data-menu { position: relative; float: left; height: 100%; width: 20%; background-color: #e7e7e7; border-right: 1px solid #d9d9d9; }
+.load-data-content { position: relative; float: left; height: 100%; width: 80%; }
+.load-data-menu ul { padding: 0; }
+.load-data-menu li { list-style: none; color: #888; padding: 8px; border-left: 5px solid #e7e7e7; cursor: pointer; }
+.load-data-menu li:hover { color: #333; border-left: 5px solid #2986b8; }
+.load-data-menu li.active { background-color: #fafafa; color: #333; border-left: 5px solid #2986b8; }
+.load-data-source-container { padding: 20px; width: 100%; height: 100%; }
+.load-data-navbar { height: 40px; width: 100%; line-height: 40px; }
+.load-data-navbar span { font-size: 1.1em; vertical-align: middle; }
+.load-data-navbar button { margin: 3px 0 3px 0; }
+.load-data-source-canvas { position: relative; background-color: #f3f3f3; border: 1px solid #d9d9d9; margin-top: 10px; width: 100%; height: -webkit-calc(100% - 50px); }
+.load-data-source { display: inline-block; background-color: #fff; border: 1px solid #e9e9e9; padding: 5px; margin: 5px 0 0 5px; }
+.load-data-source-progress { position: relative; width: 50px; height: 50px; }
+.load-data-source-title { padding: 8px 10px 0 5px; }
+.load-data-source-label { color: #999; font-size: 0.8em; }
+.load-data-source-close { padding: 0 3px; }
+.load-data-source-close a { color: #666; cursor: pointer; }
+.load-data-source-close a:hover { color: #d62728; }
+
+/* progress circle */
+.progress-circle { width: 100%; height: 100%; }
+.progress-circle path { fill: transparent; stroke-width: 5px; }
+.progress-txt { fill: #686868; font-size: 0.8em; }
 
 /* panel */
 .emr-panel { position: absolute; background-color: #f5f5f5; border: 1px solid #ccc; border-radius: 6px; z-index: 1; }
